--- a/FinalExam/FinalExam/FinalExam.csproj
+++ b/FinalExam/FinalExam/FinalExam.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CustomEntryRenderer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
